# tmux-iterm-command

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  add_to_claude.md  claude-tmux-iterm2.md  how_it_works.md  pyproject.toml  requirements.txt  usage_guide.md
.qwen/: settings.json
src/claude_tmux/: __init__.py  cli.py  commands.py
src/tmux_iterm_command/: __init__.py  cli.py  commands.py  manager.py
src/tmux_iterm_command.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_basic.py  test_commands.py  test_manager.py
