[project]
name = "ticmd"
version = "0.1.0"
description = "Tmux and iTerm2 command tool for coding agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Developer", email = "developer@example.com"}]
dependencies = [
    "libtmux>=0.37.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
]

[project.scripts]
ticmd = "ticmd.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"